[tool.poetry]
name = "buienalarm-hassdunnink-api"
version = "0.1.0"
description = "api to provide rain information"
authors = ["Joshua Dunnink <Joshua.Dunnink@ing.com>"]
readme = "README.md"
packages = [{include = "buienalarm_hassdunnink_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
flake8 = "^7.1.0"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
